[gd_scene load_steps=55 format=3 uid="uid://cxlrwdgxhrbi8"]

[ext_resource type="Script" path="res://pig.gd" id="1_c2w7a"]
[ext_resource type="Texture2D" uid="uid://t772rip1vmkf" path="res://Sprites/03-Pig/Attack (34x28).png" id="1_ttbc5"]
[ext_resource type="Texture2D" uid="uid://clptth51uar0k" path="res://Sprites/03-Pig/Idle (34x28).png" id="2_mdws4"]
[ext_resource type="Texture2D" uid="uid://ddonk3un1krhx" path="res://Sprites/03-Pig/Run (34x28).png" id="3_5br3o"]
[ext_resource type="Texture2D" uid="uid://rymxu2ld455e" path="res://Sprites/03-Pig/Idle (34x28) - Copy.png" id="4_r2xi1"]
[ext_resource type="Texture2D" uid="uid://bkrqsrcjj6sgp" path="res://Sprites/03-Pig/Run (34x28) - Copy.png" id="6_6tdhl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oi7lm"]
atlas = ExtResource("1_ttbc5")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3dxo"]
atlas = ExtResource("1_ttbc5")
region = Rect2(34, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_nseyh"]
atlas = ExtResource("1_ttbc5")
region = Rect2(68, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_jule8"]
atlas = ExtResource("1_ttbc5")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl5sp"]
atlas = ExtResource("1_ttbc5")
region = Rect2(136, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxlwq"]
atlas = ExtResource("2_mdws4")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts46m"]
atlas = ExtResource("2_mdws4")
region = Rect2(34, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6eri"]
atlas = ExtResource("2_mdws4")
region = Rect2(68, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1yrv"]
atlas = ExtResource("2_mdws4")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv0pg"]
atlas = ExtResource("2_mdws4")
region = Rect2(136, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_e70e3"]
atlas = ExtResource("2_mdws4")
region = Rect2(170, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8hjx"]
atlas = ExtResource("2_mdws4")
region = Rect2(204, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4n8q"]
atlas = ExtResource("2_mdws4")
region = Rect2(238, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ordxf"]
atlas = ExtResource("2_mdws4")
region = Rect2(272, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgew0"]
atlas = ExtResource("2_mdws4")
region = Rect2(306, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwq4o"]
atlas = ExtResource("2_mdws4")
region = Rect2(340, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_28fq5"]
atlas = ExtResource("4_r2xi1")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_q00me"]
atlas = ExtResource("4_r2xi1")
region = Rect2(34, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_syave"]
atlas = ExtResource("4_r2xi1")
region = Rect2(68, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo154"]
atlas = ExtResource("4_r2xi1")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjqj0"]
atlas = ExtResource("4_r2xi1")
region = Rect2(136, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcrhc"]
atlas = ExtResource("4_r2xi1")
region = Rect2(170, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xu4d"]
atlas = ExtResource("4_r2xi1")
region = Rect2(204, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_x21l2"]
atlas = ExtResource("4_r2xi1")
region = Rect2(238, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxpfa"]
atlas = ExtResource("4_r2xi1")
region = Rect2(272, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5kha"]
atlas = ExtResource("4_r2xi1")
region = Rect2(306, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv7fb"]
atlas = ExtResource("4_r2xi1")
region = Rect2(340, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_mchra"]
atlas = ExtResource("3_5br3o")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1gi7"]
atlas = ExtResource("3_5br3o")
region = Rect2(34, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_me66a"]
atlas = ExtResource("3_5br3o")
region = Rect2(68, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_agjab"]
atlas = ExtResource("3_5br3o")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3uok"]
atlas = ExtResource("3_5br3o")
region = Rect2(136, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mubm"]
atlas = ExtResource("3_5br3o")
region = Rect2(170, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbv77"]
atlas = ExtResource("6_6tdhl")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_08tj2"]
atlas = ExtResource("6_6tdhl")
region = Rect2(34, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hipg"]
atlas = ExtResource("6_6tdhl")
region = Rect2(68, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_kld5t"]
atlas = ExtResource("6_6tdhl")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_31e5t"]
atlas = ExtResource("6_6tdhl")
region = Rect2(136, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qe3i"]
atlas = ExtResource("6_6tdhl")
region = Rect2(170, 0, 34, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_0le26"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi7lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3dxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nseyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jule8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl5sp")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxlwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts46m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6eri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1yrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv0pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e70e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8hjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4n8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ordxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgew0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwq4o")
}],
"loop": false,
"name": &"idleleft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_28fq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q00me")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syave")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo154")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjqj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcrhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xu4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x21l2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxpfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5kha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv7fb")
}],
"loop": false,
"name": &"idleright",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mchra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1gi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me66a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agjab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3uok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mubm")
}],
"loop": false,
"name": &"runleft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbv77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08tj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hipg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kld5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31e5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qe3i")
}],
"loop": false,
"name": &"runright",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_kahn4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_0le26")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fbhd7"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"playerHit"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mh6vu"]
_data = {
"RESET": SubResource("Animation_kahn4"),
"attack": SubResource("Animation_fbhd7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3y8uf"]
size = Vector2(150, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u011n"]
size = Vector2(13.5, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yon7q"]
size = Vector2(13.5, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5h0cl"]
size = Vector2(63.25, 53.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sh2oy"]
size = Vector2(18, 16)

[node name="Pig" type="CharacterBody2D" groups=["Pigs"]]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_c2w7a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0le26")
animation = &"idleleft"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mh6vu")
}

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(3, 5)
shape = SubResource("RectangleShape2D_3y8uf")

[node name="RightAttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="RightAttackArea"]
position = Vector2(9.25, 4)
shape = SubResource("RectangleShape2D_u011n")

[node name="LeftAttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftAttackArea"]
position = Vector2(-4.25, 4)
shape = SubResource("RectangleShape2D_yon7q")

[node name="PlayerAttackArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerAttackArea"]
position = Vector2(3, 5)
shape = SubResource("RectangleShape2D_5h0cl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(3, 6)
shape = SubResource("RectangleShape2D_sh2oy")

[node name="HealthBar" type="ProgressBar" parent="."]
self_modulate = Color(0, 1, 0, 1)
offset_left = -13.0
offset_top = -10.0
offset_right = 137.0
offset_bottom = 17.0
scale = Vector2(0.2, 0.2)
value = 100.0
show_percentage = false

[node name="CanTakeDamage" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_area_exited"]
[connection signal="area_entered" from="RightAttackArea" to="." method="_on_right_attack_area_area_entered"]
[connection signal="area_exited" from="RightAttackArea" to="." method="_on_right_attack_area_area_exited"]
[connection signal="area_entered" from="LeftAttackArea" to="." method="_on_left_attack_area_area_entered"]
[connection signal="area_exited" from="LeftAttackArea" to="." method="_on_left_attack_area_area_exited"]
[connection signal="area_entered" from="PlayerAttackArea" to="." method="_on_player_attack_area_area_entered"]
[connection signal="area_exited" from="PlayerAttackArea" to="." method="_on_player_attack_area_area_exited"]
